[project]
name = "comfyui-ltxvideo-registry-mattabyte"
description = "Custom nodes for LTX-Video support in ComfyUI - registry fix - forked by Mattabyte"
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Mattabyte/ComfyUI-LTXVideo-Registry_Mattabyte"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mattabyte"
DisplayName = "ComfyUI-LTXVideo-Registry_Mattabyte"
Icon = ""
